syntax = "proto3";

package pointer_viewmodels_protos;

option csharp_namespace = "Pointer.ViewModels.Protos";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

// Message representing the full state of the PointerViewModel
message PointerViewModelState {
}

message UpdatePropertyValueRequest {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message PropertyChangeNotification {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message SubscribeRequest {
  string client_id = 1;
}

enum ConnectionStatus {
  UNKNOWN = 0;
  CONNECTED = 1;
  DISCONNECTED = 2;
}

message ConnectionStatusResponse {
  ConnectionStatus status = 1;
}

service PointerViewModelService {
  rpc GetState (google.protobuf.Empty) returns (PointerViewModelState);
  rpc UpdatePropertyValue (UpdatePropertyValueRequest) returns (google.protobuf.Empty);
  rpc SubscribeToPropertyChanges (SubscribeRequest) returns (stream PropertyChangeNotification);
  rpc Ping (google.protobuf.Empty) returns (ConnectionStatusResponse);
}
